--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.0",
-    "ejs": "^2.6.1",
-    "ejs-webpack-loader": "^2.2.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
@@ -40,6 +38,10 @@
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "rimraf": "^2.6.3"
   },
   "peerDependencies": {
