--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.6.5",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -32,17 +34,16 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
+    "raw-loader": "^1.0.0",
+    "rimraf": "^2.6.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "express": "^4.16.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-live": "^1.12.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "rimraf": "^2.6.3"
+    "react-router-dom": "^4.3.1"
   },
   "peerDependencies": {
     "react": "^16.7.0",
