--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run build:prod && node ./dist/server/server.js",
     "develop": "webpack-dev-server --env.development --env.devServer --mode=development --config=webpack.config.js",
-    "build": "rimraf lib && webpack --env.production --mode=production --config=webpack.config.js"
+    "build": "rimraf lib build && webpack --env.production --mode=production --config=webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,23 +25,26 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.0",
+    "front-matter-loader": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.5",
+    "raw-loader": "^1.0.0",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "raw-loader": "^1.0.0",
-    "rimraf": "^2.6.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-live": "^1.12.0",
+    "react-markdown": "^4.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
