--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run build:prod && node ./dist/server/server.js",
     "develop": "webpack-dev-server --env.development --env.devServer --mode=development --config=webpack.config.js",
-    "build": "rimraf lib build && webpack --env.production --mode=production --config=webpack.config.js"
+    "build": "rimraf lib public && webpack --env.production --mode=production --config=webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -43,6 +43,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-error-boundary": "^1.2.3",
     "react-live": "^1.12.0",
     "react-markdown": "^4.0.6",
     "react-router": "^4.3.1",
